# logger_foundry

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  run_ci.py
ci_tests/: build_test_foundry.py
ci_tests/end_to_end_tests/: .gitignore
ci_tests/end_to_end_tests/test_unix_and_web_socket/: logger_daemon.cpp  test_unix_and_web_socket.py
include/logger_foundry/: logger_foundry.h
src/: logger_foundry.cpp
src/daemon_orchestrator/: daemon_orchestrator.cpp  daemon_orchestrator.h
src/input_socket/: input_socket.cpp  input_socket.h
src/log_writer/: log_writer.h
src/logger_daemon/: CMakeLists.txt  logger_daemon.cpp
src/logger_daemon/buffer_parsing/: buffer_parser.h
src/logger_daemon/config_headers/: socket_config_structs.h
src/logger_daemon/daemon_orchestrator/: daemon_orchestrator.cpp  daemon_orchestrator.h
src/logger_daemon/input_socket/: input_socket.cpp
src/logger_daemon/log_writer/: log_writer.cpp  log_writer.h
